<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.customer.com.twohrgrocery.customer.UpdateSavedAddress">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="12dp"
                android:text="@string/updateaddress"
                android:textColor="@color/RiverBed"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/orucolor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/DodgerBlue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/DodgerBlue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/CornflowerBlue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="0.7"
                android:background="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/deliveryaddr"
            android:textColor="#454F63"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/addressline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextborder"
            android:hint="@string/addrline"
            android:padding="10dp" />

        <EditText
            android:id="@+id/miscaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextborder"
            android:hint="@string/apt"
            android:padding="10dp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextborder"
            android:hint="@string/city"
            android:padding="10dp" />

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextborder"
            android:hint="@string/state"
            android:padding="10dp" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextborder"
            android:hint="@string/zip"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextborder"
            android:hint="@string/country"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/makethisdefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/check_updateAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/CornflowerBlue"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/makedef" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/cancel_updateAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button_cpy"
            android:text="@string/cancel"
            android:textColor="#454F63"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"/>

        <Button
            android:id="@+id/update_updateAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/update"
            android:layout_marginTop="2dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center"/>


    </LinearLayout>

</LinearLayout>
</ScrollView>
