<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="false"
        android:background="@color/white"
        tools:context="com.customer.com.twohrgrocery.customer.DeliveryAddress">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="15dp"
            android:text="@string/delivery"
            android:textSize="16sp"
            android:textColor="@color/RiverBed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/orucolor"
                android:layout_weight="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/DodgerBlue"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/DodgerBlue"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/CornflowerBlue"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/white"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            android:background="@drawable/gradientbackground">

            <TextView
                android:id="@+id/text_delivAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/confirm"
                android:layout_margin="5dp"/>


            <EditText
                android:id="@+id/addressline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/addrline"
                android:inputType="textMultiLine|textVisiblePassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/miscaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/apt"
                android:inputType="textMultiLine|textVisiblePassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/city"
                android:inputType="textMultiLine|textVisiblePassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/state"
                android:inputType="textMultiLine|textVisiblePassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/zip"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextborder"
                android:hint="@string/country"
                android:inputType="textMultiLine|textVisiblePassword"
                android:padding="10dp" />


            <LinearLayout
                android:id="@+id/layout_delivAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <CheckBox
                    android:id="@+id/checkDeliveryAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/CornflowerBlue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checktext"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_deliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_cart"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:text="@string/buttonconfirm"
        android:textColor="@color/white"/>


</LinearLayout>
</ScrollView>