<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.customer.com.twohrgrocery.customer.ZipcodeFailure">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp"
        android:layout_margin="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/cart"/>

            <TextView
                android:id="@+id/ziptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/hint_toolbar"
                android:layout_marginLeft="4dp"
                android:textColor="#3497FD"
                android:textSize="30dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/failure"
        android:textColor="#FA0303"
        android:textSize="24dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/advice"
        android:textColor="#959DAD"
        android:textSize="24dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/mailMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/eme"
            android:textSize="20dp"
            android:inputType="number"
            android:background="@drawable/edittextborder"/>

        <EditText
            android:id="@+id/txtMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:hint="@string/txtme"
            android:textSize="20dp"
            android:inputType="number"
            android:background="@drawable/edittextborder"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/cont"
            android:textColor="#ffffff" />

    </LinearLayout>

    </LinearLayout>
</ScrollView>
