<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
            android:id="@+id/orderID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/orderid"
            android:textSize="12sp"
            android:textColor="@color/CornflowerBlue"/>

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text=""
                android:textSize="12sp"
                android:textColor="#78849E"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView

                android:id="@+id/orderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/ordertotal"
                android:textSize="12sp"
                android:layout_gravity="end"
                android:textColor="@color/CornflowerBlue"/>

            <TextView
                android:id="@+id/paymentStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="end"
                android:background="@drawable/orderstatusbtn"
                android:fontFamily="@font/open_sans_bold"
                android:padding="7dp"
                android:text="@string/payappr"
                android:textColor="#3497FD" />


            <TextView

                android:id="@+id/orderDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_gravity="end"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/deliverydate"
                android:textSize="12sp"
                android:textColor="#78849E"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>